// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLink accent is rendered 1`] = `
<button
  class="euiLink emotion-euiLink-accent"
  type="button"
/>
`;

exports[`EuiLink button respects the type property 1`] = `
<button
  class="euiLink emotion-euiLink-primary"
  type="submit"
/>
`;

exports[`EuiLink danger is rendered 1`] = `
<button
  class="euiLink emotion-euiLink-danger"
  type="button"
/>
`;

exports[`EuiLink ghost is rendered 1`] = `
<button
  class="euiLink emotion-euiLink-ghost"
  type="button"
/>
`;

exports[`EuiLink if href is not specified, it renders a button of type=button 1`] = `
<button
  class="euiLink emotion-euiLink-primary"
  type="button"
/>
`;

exports[`EuiLink it is an external link 1`] = `
<a
  class="euiLink emotion-euiLink-primary"
  href="/baz/bing"
  rel="noreferrer"
>
  <span
    class="emotion-EuiExternalLinkIcon"
    data-euiicon-type="popout"
    role="presentation"
  />
  <span
    class="emotion-euiScreenReaderOnly"
  >
    (external)
  </span>
</a>
`;

exports[`EuiLink it passes the default props through 1`] = `
<button
  aria-label="aria-label"
  class="euiLink testClass1 testClass2 emotion-euiLink-primary-euiTestCss"
  data-test-subj="test subject string"
  type="button"
/>
`;

exports[`EuiLink it supports both href and onClick 1`] = `
<a
  class="euiLink emotion-euiLink-primary"
  href="/imalink"
  rel="noreferrer"
/>
`;

exports[`EuiLink primary is rendered 1`] = `
<button
  class="euiLink emotion-euiLink-primary"
  type="button"
/>
`;

exports[`EuiLink subdued is rendered 1`] = `
<button
  class="euiLink emotion-euiLink-subdued"
  type="button"
/>
`;

exports[`EuiLink success is rendered 1`] = `
<button
  class="euiLink emotion-euiLink-success"
  type="button"
/>
`;

exports[`EuiLink supports children 1`] = `
<a
  class="euiLink emotion-euiLink-primary"
  href="#"
  rel="noreferrer"
>
  <span>
    Hiya!!!
  </span>
</a>
`;

exports[`EuiLink supports disabled 1`] = `
<button
  class="euiLink emotion-euiLink-disabled"
  disabled=""
  type="button"
/>
`;

exports[`EuiLink supports href 1`] = `
<a
  class="euiLink emotion-euiLink-primary"
  href="/baz/bing"
  rel="noreferrer"
/>
`;

exports[`EuiLink supports rel 1`] = `
<a
  class="euiLink emotion-euiLink-primary"
  href="hoi"
  rel="noreferrer stylesheet"
/>
`;

exports[`EuiLink supports target 1`] = `
<a
  class="euiLink emotion-euiLink-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="emotion-EuiExternalLinkIcon"
    data-euiicon-type="popout"
    role="presentation"
  />
  <span
    class="emotion-euiScreenReaderOnly"
  >
    (external, opens in a new tab or window)
  </span>
</a>
`;

exports[`EuiLink text is rendered 1`] = `
<button
  class="euiLink emotion-euiLink-text"
  type="button"
/>
`;

exports[`EuiLink warning is rendered 1`] = `
<button
  class="euiLink emotion-euiLink-warning"
  type="button"
/>
`;
